<resources>
    <string name="action_send">Send</string>
    <string name="action_send_tkn">Send %1$s</string>
    <string name="recipient">Recipient</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="title_account_list">Wallets</string>
    <string name="confirm_delete_account">Make sure that you have a backup of this wallet.</string>
    <string name="copy">Copy to clipboard</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="ok">OK</string>
    <string name="barcode_error_format">Invalid barcode format: %s</string>
    <string name="title_delete_account">Are you sure you want to delete wallet?</string>
    <string name="error_import">Error importing keystore</string>
    <string name="error_deleting_account">Error deleting wallet</string>
    <string name="do_manage_make_backup">Did you manage to make a backup?</string>
    <string name="yes_continue">Yes, continue</string>
    <string name="no_repeat">No, repeat</string>
    <string name="transfer">Transfer %s</string>
    <string name="action_buy">Buy %s</string>
    <string name="empty" />
    <string name="try_again">Try again</string>
    <string name="already_have_account">Already have a wallet?</string>
    <string name="action_create_new_account">Create a New Wallet</string>
    <string name="unknown_error">An error has occurred.</string>
    <string name="no_tokens">No tokens found.</string>
    <string name="title_my_address">My Address</string>
    <string name="title_activity_send">Send</string>
    <string name="title_activity_confirmation">Confirm</string>
    <string name="title_transaction_details">Transaction Details</string>
    <string name="title_dialog_error">Error</string>
    <string name="title_dialog_handling">Handling…</string>
    <string name="title_dialog_add_account">Add wallet</string>
    <string name="title_dialog_deposit">How would you like to buy?</string>
    <string name="toast_message_wallet_imported">The wallet was imported</string>
    <string name="toast_message_wallet_exported">A backup was created</string>
    <string name="toast_qr_code_no_address">QR code doesn\'t contain valid address</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_gas_limit">Gas Limit</string>
    <string name="label_gas_price">Gas Price</string>
    <string name="label_gas_price_gwei">Gas Price (GWEI)</string>
    <string name="label_old_gas_price">Old Gas Price</string>
    <string name="label_network_fee">Network Fee (Maximum)</string>
    <string name="button_ok">OK</string>
    <string name="subtitle_from">From</string>
    <string name="subtitle_to">To</string>
    <string name="subtitle_gas_fee">Gas Fee</string>
    <string name="subtitle_gas_price">Gas Price</string>
    <string name="subtitle_gas_used">Gas Used</string>
    <string name="subtitle_network_fee">Network Fee</string>
    <string name="subtitle_transaction_num">Transaction #</string>
    <string name="subtitle_transaction_hash_num">Transaction Hash #</string>
    <string name="subtitle_transaction_time">Transaction Time</string>
    <string name="subtitle_block_num">Block #</string>
    <string name="subtitle_block">Block</string>
    <string name="action_share">Share</string>
    <string name="action_more_details">More details</string>
    <string name="action_add_wallet">Add wallet</string>
    <string name="action_add_token">Add Token</string>
    <string name="action_open_etherscan">View in Block Explorer</string>
    <string name="action_coinbase">Coinbase</string>
    <string name="action_localeth">LocalEthereum</string>
    <string name="action_changelly">Changelly (Buy with Credit card)</string>
    <string name="subject_transaction_detail">Transaction detail</string>
    <string name="error_fail_generate_qr">Could not generate qr code.</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="error_invalid_amount">Invalid amount</string>
    <string name="error_transaction_failed">Transaction error</string>
    <string name="error_transaction_may_fail">Node indicates transaction may fail. Continue?</string>
    <string name="error_import_failed">Failed to import token</string>
    <string name="error_must_numeric">must be a numeric value.</string>
    <string name="transaction_succeeded">Transaction successful</string>
    <string name="NA">N/A</string>
    <string name="error_wallet_not_selected">Wallet is not selected</string>
    <string name="no_transactions_yet">Activities will Appear here</string>
    <string name="unknown_balance_without_symbol">--</string>
    <string name="dummy_transaction_value">&#45;&#45;</string>
    <string name="title_dialog_sending">Sending…</string>
    <string name="scan_qr">Get address from QR Code</string>
    <string name="info_gas_price">The higher the gas price, the more expensive your transaction fee will be, but the quicker your transaction will be processed by the Ethereum network.</string>
    <string name="info_gas_limit">The gas limit prevents smart contracts from consuming all your Ethereum. We will try to calculate the gas limit automatically for you, but some smart contracts may require a custom gas limit.</string>
    <string name="title_send_settings">Advanced</string>
    <string name="error_add_token">Could not add token.</string>
    <string name="error_already_added">Already added</string>
    <string name="error_export">Failed to export the wallet</string>
    <string name="error_fail_load_tokens">Failed to load tokens list</string>
    <string name="error_create_wallet">Failed to create a wallet</string>
    <string name="app_name">JAX Wallet</string>
    <string name="all">All</string>
    <string name="currency">Currencies</string>
    <string name="advanced">Advanced Options</string>
    <string name="copy_wallet_address">Copy Wallet Address</string>
    <string name="hint_contract_name">Name</string>
    <string name="hint_contract_venue">Venue</string>
    <string name="hint_contract_date">Date</string>
    <string name="hint_contract_price">Price</string>
    <string name="action_use">Redeem</string>
    <string name="action_sell">Sell</string>
    <string name="action_transfer">Transfer</string>
    <string name="address">address</string>
    <string name="action_redeem">Redeem</string>
    <string name="add_ids_to_redeem">Tickets Redeemed</string>
    <string name="title_use_token">Use Token</string>
    <string name="token_balance">%1$s%2$s</string>
    <string name="token_name">%1$s (%2$s)</string>
    <string name="create_sell_order">Create Sales Order</string>
    <string name="select_tickets">Select %1$s to Sell:</string>
    <string name="select_tickets_redeem">Select Tickets to Redeem:</string>
    <string name="action_purchase">Purchase</string>
    <string name="toolbar_header_wallet">Wallet</string>
    <string name="toolbar_header_settings">Settings</string>
    <string name="toolbar_header_help">Help \u0026 FAQ</string>
    <string name="toolbar_header_transactions">Transactions</string>
    <string name="settings_my_wallet_address">My Wallet Address</string>
    <string name="settings_notification">Notifications</string>
    <string name="title_redeem">Redeem Ticket</string>
    <string name="waiting_for_blockchain">Waiting for blockchain …</string>
    <string name="btn_text_apply">Apply</string>
    <string name="filter_by">Filter by:</string>
    <string name="filter_date_label">Date</string>
    <string name="filter_price_label">Price</string>
    <string name="filter_distance_label">Distance</string>
    <string name="filter_timeframe_label">Timeframe</string>
    <string name="set_a_price">Set a Price:</string>
    <string name="learn_more_about_ethereum">Learn more about Ethereum</string>
    <string name="price_per_ticket">Price Per Ticket</string>
    <string name="set_price_subtext_abr">Set price in %1$s (%2$s)</string>
    <string name="transfer_tickets">Transfer Tickets</string>
    <string name="link_valid_until">The MagicLink will be valid until %1$s %2$s</string>
    <string name="generate_pick_up_link">Generate a MagicLink</string>
    <string name="transfer_now">Transfer Now</string>
    <string name="to">to</string>
    <string-array name="filter_date">
        <item>Most Recent</item>
        <item>Oldest</item>
    </string-array>
    <string-array name="filter_price">
        <item>Low to High</item>
        <item>High to Low</item>
    </string-array>
    <string-array name="filter_distance">
        <item>Any</item>
        <item>1km</item>
        <item>5km</item>
        <item>10km</item>
    </string-array>
    <string-array name="filter_timeframe">
        <item>Any</item>
        <item>1 week</item>
        <item>1 month</item>
        <item>1 year</item>
    </string-array>
    <string-array name="filter_match">
        <item>Any</item>
        <item>1-64</item>
    </string-array>
    <string-array name="filter_class">
        <item>Any</item>
        <item>VIP</item>
    </string-array>
    <string-array name="filter_seats">
        <item>Any</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="filter_search_date">
        <item>DD/MM/YY</item>
    </string-array>
    <string name="eth">ETH</string>
    <string name="quantity_of_tickets">Quantity of Tickets</string>
    <string name="total_cost_label">Total Cost:</string>
    <string name="equivalent_in_usd">Equivalent in USD</string>
    <string name="total_cost">%1$s %2$s</string>
    <string name="select_quantity_tickets">Select Quantity of %1$s</string>
    <string name="ticket_redeemed">Your ticket has been redeemed</string>
    <string name="search_for">Search for:</string>
    <string name="filter_search_class">Class</string>
    <string name="filter_search_seats">No. of Seats Together</string>
    <string name="search_label_match">Match</string>
    <string name="help_question1">What is ETH/Ethereum?</string>
    <string name="help_question2">Why does aWallet use Ethereum?</string>
    <string name="help_question3">How do I get my money?</string>
    <string name="help_question4">What is a Seed Phrase?</string>
    <string name="help_question5">How do I transfer ETH into my wallet?</string>
    <string name="help_question6">What is TokenScript?</string>
    <string name="help_question7" translatable="false">Privacy Policy</string>
    <string name="title_import">Import Wallet</string>
    <string name="enter_password">Enter Password</string>
    <string name="hint_keystore">Enter Keystore JSON</string>
    <string name="suggestion_private_key">Private key has to be 64 characters long</string>
    <string name="action_continue">Continue</string>
    <string name="enter_seed_phrase">Enter seed phrase</string>
    <string name="seed_phrase_conversion_message">If your seed phrase is not in English, please convert it to English on your own using tools like this https://iancoleman.io/bip39/</string>
    <string name="import_from_cloud">IMPORT FROM ICLOUD/DROPBOX/GOOGLE DRIVE</string>
    <string name="enter_private_key">Enter private key</string>
    <string name="remember_your_password">NOTE: You must remember your password. We do not store your password elsewhere. KeyStore is always encrypted, otherwise whoever has it can gain the money.</string>
    <string name="action_close">Close</string>
    <string name="confirm_swap">Confirm A Swap</string>
    <string name="label_transaction_fee">Transaction Fee</string>
    <string name="label_markup_fee">Markup Fee</string>
    <string name="waiting_confirm_swap">Waiting For Confirmation</string>
    <string name="swapping">Swapping %1$s %2$s For  %3$s %4$s</string>
    <string name="confirm_transaction_in_wallet">Confirm This Transaction In Your Wallet</string>
</resources>