<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/holding_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="@dimen/sp12">

    <LinearLayout
        android:id="@+id/input_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/import_action_ks"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.jaxwallet.app.widget.PasswordInputView
            android:id="@+id/input_keystore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            custom:label="@string/hint_keystore"
            custom:minHeightValue="170"
            custom:imeOptions="actionDone"
            custom:lines="6" />

        <com.jaxwallet.app.widget.PasswordInputView
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:visibility="gone"
            custom:inputType="textPassword"
            custom:imeOptions="actionDone"
            custom:label="@string/enter_password" />

        <TextView
            android:id="@+id/text_password_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font_light"
            android:visibility="gone"
            android:textSize="14sp"
            android:textColor="@color/grey2"
            android:text="@string/remember_your_password" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/import_action_ks"
            style="@style/Button.Fill.Primary"
            android:fontFamily="@font/font_semibold"
            android:text="@string/action_continue"
            />

        <LinearLayout
            android:id="@+id/bottom_marker_ks"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:visibility="invisible"
            android:orientation="vertical">
        </LinearLayout>

        <TextView
            android:id="@+id/import_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_view_layout"
            android:layout_above="@id/import_action_ks"
            android:textColor="@color/text_black"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/import_from_cloud"
            android:textSize="@dimen/sp13"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal" />
    </LinearLayout>

</FrameLayout>
