<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="@dimen/sp12">

    <LinearLayout
        android:id="@+id/input_view_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_holder_pk"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.alphawallet.app.widget.PasswordInputView
            android:id="@+id/input_private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            custom:minHeightValue="90"
            custom:imeOptions="actionDone"
            custom:lines="2"
            custom:label="@string/enter_private_key" />

        <TextView
            android:id="@+id/text_privatekey_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp13"
            android:text="@string/suggestion_private_key" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_holder_pk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/import_from_cloud"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp13" />

        <Button
            android:id="@+id/import_action_pk"
            style="@style/Button.Fill.Primary"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/font_semibold"
            android:text="@string/title_import"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_marker_pk"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
    </LinearLayout>
</FrameLayout>
