<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp22">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/action_close"
            android:src="@drawable/ic_close" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_toStartOf="@id/logo"
            android:layout_toEndOf="@id/image_close"
            android:fontFamily="@font/font_bold"
            android:gravity="center_horizontal"
            android:text="@string/confirm_swap"
            android:textColor="@color/text_black"
            android:textFontWeight="1"
            android:textSize="@dimen/sp18" />

        <ImageView
            android:id="@+id/logo"
            android:contentDescription="@string/app_name"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:visibility="gone"/>

    </RelativeLayout>
    <com.jaxwallet.app.widget.SwapTransactionView
        android:id="@+id/from_view"
        android:layout_marginTop="@dimen/dp12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="@dimen/dp12">
        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_swap"/>
    </LinearLayout>
    <com.jaxwallet.app.widget.SwapTransactionView
        android:id="@+id/to_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp12">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semibold"
            android:textSize="@dimen/sp12"
            android:textColor="@color/text_black"
            android:text="@string/hint_contract_price"/>
        <TextView
            android:id="@+id/swap_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:fontFamily="@font/font_semibold"
            android:textSize="@dimen/sp12"
            android:textColor="@color/text_black"
            android:text="0.00"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_password_entry"
        android:padding="@dimen/dp12">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:textSize="@dimen/sp12"
                android:textColor="@color/text_black"
                android:text="@string/label_transaction_fee"/>
            <TextView
                android:id="@+id/tv_transaction_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:fontFamily="@font/font_regular"
                android:textSize="@dimen/sp12"
                android:textColor="@color/text_black"
                android:text="0.00"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:textSize="@dimen/sp12"
                android:textColor="@color/text_black"
                android:text="@string/label_markup_fee"/>
            <TextView
                android:id="@+id/tv_markup_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:fontFamily="@font/font_regular"
                android:textSize="@dimen/sp12"
                android:textColor="@color/text_black"
                android:text="0.00"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:textSize="@dimen/sp12"
                android:textColor="@color/text_black"
                android:text="@string/label_markup_fee"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:fontFamily="@font/font_regular"
                android:textSize="@dimen/sp12"
                android:textColor="@color/text_black"
                android:text="0.00"/>
        </LinearLayout>
    </LinearLayout>
    <com.jaxwallet.app.widget.FunctionButtonBar
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        />
</LinearLayout>