<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:id="@+id/layout_holding_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_holder"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.alphawallet.app.widget.PasswordInputView
            android:id="@+id/input_seed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:visibility="visible"
            custom:imeOptions="actionDone"
            custom:inputType="textNoSuggestions"
            custom:label="@string/enter_seed_phrase"
            custom:lines="6"
            custom:minHeightValue="170" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_suggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_non_english_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/seed_phrase_conversion_message"
            android:textColor="@color/greyfivef"
            android:textSize="14sp" />

        <Button
            android:id="@+id/import_action"
            style="@style/Button.Fill.Primary"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/font_semibold"
            android:text="@string/title_import"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_marker"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="invisible"></LinearLayout>
</FrameLayout>
